# EnginePrototype

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  buildAndRunWindows.bat  compile.bat  compile.sh  compileAndRunLinux.sh  compileAndRunMac.sh  compileAndRunWindows.bat  compileMac.sh  compileShaders.bat  compileShaders.sh  compile_flags.txt  engine  imgui.ini  install.bat  install.sh  install2.bat  prop.yaml  properties.yaml  setupVulkanEnvironment.sh  test.py  test.yaml
Test_data/: test.csv  test.json  test.yaml
assets/models/: final_low_poly_character_rigged.dae
assets/shaders/: colorShader.vert  uiCircle.frag  uiCircle.vert  uiShader.frag  uiShader.vert  uiText.frag  uiText.vert
assets/shaders/compiled/: colorShader.vert.spv  uiCircle.frag.spv  uiCircle.vert.spv  uiShader.vert.spv  uiText.frag.spv  uiText.vert.spv
include/: tiny_obj_loader.h
include/imgui/backends/: imgui_impl_sdl.cpp  imgui_impl_sdl.h
lib/: SDL2.lib  SDL2main.lib
models/: Cube.dae  Man.dae  Plane.dae
shaders/: colorShader.frag  shader.frag  shader.vert  uiShader.frag  uiShader.frag.spv  uiShader.vert  uiShader.vert.spv
shaders/compiled/: uiShader.vert.spv
src/: main.cpp
src/core/: component.cpp  component.h  object.cpp  object.h  object.tpp  predefined.cpp  predefined.h  standardGraphicsObject.cpp  standardGraphicsObject.h  transform.cpp  transform.h
src/graphics/: Face.cpp  Face.h  QueueFamilyIndices.h  camera.cpp  camera.h  colorResources.cpp  colorResources.h  commandBuffer.cpp  commandBuffer.h  commandPool.cpp  commandPool.h  dephResources.cpp  depthResources.h  descriptorPool.cpp  descriptorPool.h  descriptorPool.tpp  descriptorSetLayout.cpp  descriptorSetLayout.h  deviceExtensions.h  eventManager.cpp  eventManager.h  font.cpp  font.h  frameBuffers.cpp  frameBuffers.h  genericGraphicsEntityInstance.cpp  genericGraphicsEntityInstance.h  graphicsEntity.cpp  graphicsEntity.h  graphicsEntityInstance.cpp  graphicsEntityInstance.h  graphicsEntityInstance.tpp  graphicsPipeline.cpp  graphicsPipeline.h  imageBlender.cpp  imageBlender.h  imageViews.cpp  imageViews.h  layoutBinding.h  logicalDevice.cpp  (+43 more)
src/graphics/UI/: ColorGUIPanel.cpp  ColorGUIPanel.h  GUIElement.cpp  GUIElement.h  GUIRenderer.cpp  GUIRenderer.h  UICircleInstance.cpp  UICircleInstance.h  UIInstance.cpp  UIInstance.h  UIRectangleInstance.cpp  UIRectangleInstance.h  UITextEntity.cpp  UITextEntity.h  UITextInstance.cpp  UITextInstance.h  UITriangleInstance.cpp  UITriangleInstance.h
src/graphics/text/: text.cpp  text.h
src/imgui/: imguiSetup.cpp  imguiSetup.h
src/input/: keyData.h  keyboardInput.cpp  keyboardInput.h  mouse.cpp  mouse.h  mouseInput.cpp  mouseInput.h
src/mathematics/: easingFunctions.cpp  easingFunctions.h  lerp.cpp  lerp.h
src/utility/: dataParser.cpp  dataParser.h  debug.cpp  debug.h  log.cpp  log.h  logging.cpp  logging.h  properties.cpp  properties.h  xml.cpp  xml.h  yamlParser.cpp  yamlParser.h
src/utility/dataParsing/: csvParser.cpp  csvParser.h  dataParser.cpp  dataParser.h  dataType.cpp  dataType.h  jsonParser.cpp  jsonParser.h  yamlParser.cpp  yamlParser.h
